[package]
name = "winter-air"
version = "0.1.0"
description = "AIR components for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography"]
keywords = ["crypto", "arithmetization", "air"]
edition = "2018"

[lib]
bench = false

[features]
alloc = ["crypto/alloc", "fri/alloc", "math/alloc", "utils/alloc"]
default = ["std"]
std = ["crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
utils = { path = "../utils", package = "winter-utils", default-features = false }
math = { path = "../math", package = "winter-math", default-features = false }
crypto = { path = "../crypto", package = "winter-crypto", default-features = false }
fri = { path = "../fri", package = "winter-fri", default-features = false }

[dev-dependencies]
rand = "0.8"

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]