[package]
name = "winter-air"
version = "0.1.0"
description = "AIR components for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "arithmetization", "air"]
edition = "2018"

[lib]
bench = false

[features]
alloc = ["crypto/alloc", "fri/alloc", "math/alloc", "utils/alloc"]
default = ["std"]
std = ["crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
utils = { version = "0.1", path = "../utils/core", package = "winter-utils", default-features = false }
math = { version = "0.1", path = "../math", package = "winter-math", default-features = false }
crypto = { version = "0.1", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.1", path = "../fri", package = "winter-fri", default-features = false }

[dev-dependencies]
rand-utils = { version = "0.1", path = "../utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
