[package]
name = "winter-air"
version = "0.12.1"
description = "AIR components for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-air/0.12.1"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "arithmetization", "air"]
edition = "2021"
rust-version = "1.84"

[lib]
bench = false

[features]
default = ["std"]
std = ["crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
crypto = { version = "0.12", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.12", path = "../fri", package = "winter-fri", default-features = false }
libm = "0.2"
math = { version = "0.12", path = "../math", package = "winter-math", default-features = false }
utils = { version = "0.12", path = "../utils/core", package = "winter-utils", default-features = false }

[dev-dependencies]
rand-utils = { version = "0.12", path = "../utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
