[package]
name = "winter-crypto"
version = "0.1.0"
description = "Cryptographic library for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "merkle-tree", "hash"]
edition = "2018"

[lib]
bench = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "merkle"
harness = false
required-features = ["concurrent"]

[features]
alloc = ["math/alloc", "utils/alloc"]
default = ["std"]
concurrent = ["utils/concurrent", "std"]
std = ["blake3/std", "math/std", "sha3/std", "utils/std"]

[dependencies]
utils = { version = "0.1", path = "../utils", package = "winter-utils", default-features = false }
math = { version = "0.1", path = "../math", package = "winter-math", default-features = false }
blake3 = { version = "1.0", default-features = false }
sha3 = { version = "0.9", default-features = false }

[dev-dependencies]
criterion = "0.3"
proptest = "1.0"
sha2 = "0.9"
rand = "0.8"
