[package]
name = "winter-crypto"
version = "0.12.0"
description = "Cryptographic library for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-crypto/0.12.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "merkle-tree", "hash"]
edition = "2021"
rust-version = "1.84"

[lib]
bench = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "merkle"
harness = false
required-features = ["concurrent"]

[features]
default = ["std"]
concurrent = ["utils/concurrent", "std"]
std = ["blake3/std", "math/std", "sha3/std", "utils/std"]

[dependencies]
blake3 = { version = "1.5", default-features = false }
math = { version = "0.12", path = "../math", package = "winter-math", default-features = false }
sha3 = { version = "0.10", default-features = false }
utils = { version = "0.12", path = "../utils/core", package = "winter-utils", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand-utils = { version = "0.12", path = "../utils/rand", package = "winter-rand-utils" }
