[package]
name = "winter-prover"
version = "0.4.2"
description = "Winterfell STARK prover"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-prover/0.4.2"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover"]
edition = "2021"
rust-version = "1.60"

[lib]
bench = false

[[bench]]
name = "matrix"
harness = false

[features]
concurrent = ["crypto/concurrent", "math/concurrent", "fri/concurrent", "utils/concurrent", "std"]
default = ["std"]
std = ["air/std", "crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.4.2", path = "../air", package = "winter-air", default-features = false }
crypto = { version = "0.4.2", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.4.2", path = '../fri', package = "winter-fri", default-features = false }
log = { version = "0.4", default-features = false }
math = { version = "0.4.2", path = "../math", package = "winter-math", default-features = false }
utils = { version = "0.4.2", path = "../utils/core", package = "winter-utils", default-features = false }

[dev-dependencies]
criterion = "0.4"
rand-utils = { version = "0.4.2", path = "../utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
