[package]
name = "winter-prover"
version = "0.9.0"
description = "Winterfell STARK prover"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-prover/0.9.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover"]
edition = "2021"
rust-version = "1.78"

[lib]
bench = false

[[bench]]
name = "logup_gkr"
harness = false

[[bench]]
name = "logup_gkr_e2e"
harness = false

[[bench]]
name = "row_matrix"
harness = false

[[bench]]
name = "lagrange_kernel"
harness = false

[features]
async = ["maybe_async/async"]
concurrent = ["crypto/concurrent", "math/concurrent", "fri/concurrent", "utils/concurrent", "sumcheck/concurrent", "std"]
default = ["std"]
std = ["air/std", "crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.9", path = "../air", package = "winter-air", default-features = false }
crypto = { version = "0.9", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.9", path = '../fri', package = "winter-fri", default-features = false }
math = { version = "0.9", path = "../math", package = "winter-math", default-features = false }
maybe_async = { path = "../utils/maybe_async" , package = "winter-maybe-async" }
sumcheck = { version = "0.1", path = "../sumcheck", package = "winter-sumcheck", default-features = false }
thiserror = { version = "1.0", git = "https://github.com/bitwalker/thiserror", branch = "no-std", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"]}
utils = { version = "0.9", path = "../utils/core", package = "winter-utils", default-features = false }
libc-print = "0.1.23"

[dev-dependencies]
criterion = "0.5"
rand-utils = { version = "0.9", path = "../utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
