[package]
name = "winter-prover"
version = "0.12.2"
description = "Winterfell STARK prover"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-prover/0.12.2"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover"]
edition = "2021"
rust-version = "1.84"

[lib]
bench = false

[[bench]]
name = "row_matrix"
harness = false

[features]
async = ["maybe_async/async"]
concurrent = ["crypto/concurrent", "math/concurrent", "fri/concurrent", "utils/concurrent", "std"]
default = ["std"]
std = ["air/std", "crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.12", path = "../air", package = "winter-air", default-features = false }
crypto = { version = "0.12", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.12", path = '../fri', package = "winter-fri", default-features = false }
math = { version = "0.12", path = "../math", package = "winter-math", default-features = false }
maybe_async = { version = "0.12", path = "../utils/maybe_async" , package = "winter-maybe-async" }
tracing = { version = "0.1", default-features = false, features = ["attributes"]}
utils = { version = "0.12", path = "../utils/core", package = "winter-utils", default-features = false }

[dev-dependencies]
criterion = "0.5"
rand-utils = { version = "0.12", path = "../utils/rand", package = "winter-rand-utils" }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
