[package]
name = "winter-utils"
version = "0.1.0"
description = "Utility functions for the Winterfell STARK prover/verifier"
authors = ["Irakliy Khaburzaniya <irakliyk@fb.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography"]
keywords = ["serialization", "transmute"]
edition = "2018"

[lib]
bench = false