[package]
name = "winter-utils"
version = "0.1.0"
description = "Utility functions for the Winterfell STARK prover/verifier"
authors = ["Irakliy Khaburzaniya <irakliyk@fb.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
categories = ["cryptography"]
keywords = ["serialization", "transmute"]
edition = "2018"

[lib]
bench = false

[features]
alloc = ["hashbrown"]
concurrent = ["rayon"]
default = ["std"]
std = []

[dependencies]
hashbrown = { version = "0.9.1", optional = true, default-features = false, features = ["ahash", "inline-more"] }
rayon = { version = "1.5", optional = true }