[package]
name = "winter-verifier"
version = "0.9.0"
description = "Winterfell STARK verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-verifier/0.9.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "verifier"]
edition = "2021"
rust-version = "1.78"

[lib]
bench = false

[features]
default = ["std"]
std = ["air/std", "crypto/std", "fri/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.9", path = "../air", package = "winter-air", default-features = false }
crypto = { version = "0.9", path = "../crypto", package = "winter-crypto", default-features = false }
fri = { version = "0.9", path = "../fri", package = "winter-fri", default-features = false }
math = { version = "0.9", path = "../math", package = "winter-math", default-features = false }
sumcheck = { version = "0.1", path = "../sumcheck", package = "winter-sumcheck", default-features = false }
thiserror = { version = "1.0", git = "https://github.com/bitwalker/thiserror", branch = "no-std", default-features = false }
utils = { version = "0.9", path = "../utils/core", package = "winter-utils", default-features = false }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
