[package]
name = "winterfell"
version = "0.10.1"
description = "Winterfell STARK prover and verifier"
authors = ["winterfell contributors"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winterfell/0.10.1"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "zkp", "stark", "prover", "verifier"]
edition = "2021"
rust-version = "1.82"

[lib]
bench = false

[features]
async = ["prover/async"]
concurrent = ["prover/concurrent", "std"]
default = ["std"]
std = ["prover/std", "verifier/std"]

[dependencies]
air = { version = "0.10", path = "../air", package = "winter-air", default-features = false }
prover = { version = "0.10", path = "../prover", package = "winter-prover", default-features = false }
verifier = { version = "0.10", path = "../verifier", package = "winter-verifier", default-features = false }

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
