[package]
name = "winter-utils"
version = "0.7.3"
description = "Utilities for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-utils/0.7.3"
categories = ["cryptography", "no-std"]
keywords = ["serialization", "transmute"]
edition = "2021"
rust-version = "1.73"

[lib]
bench = false

[features]
concurrent = ["rayon", "std"]
default = ["std"]
std = []

[dependencies]
rayon = { version = "1.8", optional = true }
